# rmoss_gz_resources

./: CMakeLists.txt  README.md  package.xml  update_model.sh
env-hooks/: gazebo.dsv.in  ignition.dsv.in
models/rm21_armor_module/: model.sdf  model.sdf.xacro  model.sdf.xmacro  rm21_armor_module.def.xacro  rm21_armor_module.def.xmacro
models/rm21_light_indicator_module/: model.sdf  model.sdf.xacro  model.sdf.xmacro  rm21_light_indicator_module.def.xacro  rm21_light_indicator_module.def.xmacro
models/rm21_speed_monitor_module/: model.config  model.sdf  model.sdf.xacro  model.sdf.xmacro  rm21_speed_monitor_module.def.xmacro
models/rm22_armor_module/: model.sdf  model.sdf.xmacro  rm22_armor_module.def.xmacro
models/rm22_light_indicator_module/: model.sdf  model.sdf.xmacro
models/rm22_speed_monitor_module/: model.sdf  model.sdf.xmacro
models/rm_fluorescent_projectile_17mm/: model.config  model.sdf  model.sdf.xacro  rm_fluorescent_projectile.def.xacro
models/rm_fluorescent_projectile_42mm/: model.sdf  model.sdf.xacro
models/rm_projectile_17mm/: model.sdf  model.sdf.xacro  model.sdf.xmacro  rm_projectile.def.xacro  rm_projectile.def.xmacro
models/rm_projectile_42mm/: model.config  model.sdf  model.sdf.xacro  model.sdf.xmacro
models/rmua19_standard_robot/: chassis_wheel.def.xacro  model.sdf  model.sdf.xacro  model.sdf.xmacro  rmua19_standard_robot.def.xacro  rmua19_standard_robot.def.xmacro
modules/rm21_speed_monitor_module/: model.sdf
rm_referee_system_models/rm21_armor_module/: model.sdf  (+1 more)
test/: rm21_referee_system.sdf  rm22_referee_system.sdf
(+23 files in other folders)
